<li>Sync.jeongho.kim</li> 추가

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>hello git</h1>
   </header>
   <ul>
+    <li>Sync.jeongho.kim</li>
     <li>마스터에서추가1</li>
     <li>마스터에서추가2</li>
     <li>push</li>
