--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li>pull</li>
     <li>push.myexample.jeongho.kim</li>
     <li>push.enhanced-happiness.jh.kim</li>
+    <li>인핸스가 작업한 내용</li>
   </ul>
 </body>
 </html>
